2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_style.c: (murrine_style_init_from_rc):
	I accidentally broke NODOKA emulated style on rev 18, fixing

2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/murrine_draw.c: (murrine_draw_button), (murrine_draw_entry),
	(murrine_draw_scale_trough), (murrine_draw_radiobutton),
	(murrine_draw_checkbox):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_button),
	(murrine_rgba_draw_entry), (murrine_rgba_draw_scale_trough),
	(murrine_rgba_draw_radiobutton), (murrine_rgba_draw_checkbox):
	* src/murrine_rc_style.c: (murrine_rc_style_init),
	(murrine_rc_style_parse), (murrine_rc_style_merge):
	* src/murrine_rc_style.h:
	* src/murrine_style.c: (murrine_set_widget_parameters),
	(murrine_style_init_from_rc), (murrine_style_copy):
	* src/murrine_style.h:
	* src/murrine_types.h:
	Added reliefstyle, 2 means shadow, 1 inset, 0 flat
	Need to be added also on draw_frame

2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* src/cairo-support.c: (murrine_draw_lightborder):
	* src/cairo-support.h:
	* src/murrine_draw.c: (murrine_draw_button),
	(murrine_draw_progressbar_fill), (murrine_draw_menubar),
	(murrine_draw_list_view_header), (murrine_draw_menuitem),
	(murrine_draw_scrollbar_stepper), (murrine_draw_scrollbar_slider):
	* src/murrine_draw_rgba.c: (murrine_rgba_draw_button),
	(murrine_rgba_draw_progressbar_fill), (murrine_rgba_draw_menubar),
	(murrine_rgba_draw_scrollbar_stepper),
	(murrine_rgba_draw_scrollbar_slider):
	* src/murrine_rc_style.c: (murrine_rc_style_init),
	(murrine_rc_style_parse), (murrine_rc_style_merge):
	* src/murrine_rc_style.h:
	* src/murrine_style.c: (murrine_set_widget_parameters),
	(murrine_style_init_from_rc), (murrine_style_realize),
	(murrine_style_copy):
	* src/murrine_style.h:
	* src/murrine_types.h:
	Added lightborderstyle, to draw the lightborder on all edges
	(lightborderstyle = 1, 0 is default)

2008-02-27  Andrea Cimitan  <andrea.cimitan@gmail.com>
